[package]
name = "call_logger"
version = "0.3.0"
edition = "2021"
authors = ["Alec Brown <alec@noser.net>"]
description = "A logger that calls another application for every logged item"
rust-version = "1.58"
license = "Apache-2.0"
repository = "https://github.com/a1ecbr0wn/call_logger"
homepage = "https://github.com/a1ecbr0wn/call_logger"
documentation = "https://docs.rs/call_logger"
readme = "README.md"
categories = ["development-tools::debugging"]
keywords = ["logging"]

[features]
default = ["timestamps"]
timestamps = ["chrono"]
minimal = []

[dependencies]
log = { version = "^0.4.22", features = ["std", "kv"] }
chrono = { version = "0.4", features = ["clock"], optional = true }
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
multi_log = "0.1.2"
mockito = "1.6.1"

[[example]]
name = "log_to_discord_script"
required-features = ["timestamps"]

[[example]]
name = "log_to_discord_url"
required-features = ["timestamps"]

[[example]]
name = "log_filtering"
required-features = ["timestamps"]
