[package]
name = "call_logger"
version = "0.6.4"
edition = "2021"
authors = ["Alec Brown <alec@noser.net>"]
description = "A logger that calls another application for every logged item"
rust-version = "1.71"
license = "Apache-2.0"
repository = "https://github.com/a1ecbr0wn/call_logger"
homepage = "https://github.com/a1ecbr0wn/call_logger"
documentation = "https://docs.rs/call_logger"
readme = "README.md"
categories = ["development-tools::debugging"]
keywords = ["logging"]

[features]
default = ["timestamps"]
timestamps = ["chrono"]
minimal = []

[dependencies]
log = { version = "0.4.28", features = ["std", "kv"] }
chrono = { version = "0.4.42", features = ["clock"], optional = true }
ureq = "3.1.2"

[dev-dependencies]
multi_log = "0.1.2"
mockito = "1.7.0"
fern = "0.7.1"

[[example]]
name = "log_to_discord_script"
required-features = ["timestamps"]

[[example]]
name = "log_to_discord_url"
required-features = ["timestamps"]

[[example]]
name = "log_filtering"
required-features = ["timestamps"]

[[example]]
name = "log_with_fern"
required-features = ["timestamps"]
